[gd_scene load_steps=3 format=3 uid="uid://clxg1guhakryv"]

[ext_resource type="Script" path="res://Menus/settings_menu.gd" id="1_07us8"]
[ext_resource type="Theme" uid="uid://cjoh1pmvhw5l0" path="res://Themes/overall_theme.tres" id="2_3npvl"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_07us8")
metadata/_edit_vertical_guides_ = [365.0, 783.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -277.0
offset_right = 235.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.647059, 0.713726, 0.552941, 1)

[node name="SettingsControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0

[node name="SettingsGridContainer" type="GridContainer" parent="CanvasLayer/SettingsControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 402.0
offset_top = 122.0
offset_right = 750.0
offset_bottom = 526.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 30
columns = 2

[node name="MasterLabel" type="Label" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
theme = ExtResource("2_3npvl")
text = "Master Volume"

[node name="MasterHSlider" type="HSlider" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../../Buttons/CloseButton")
focus_neighbor_bottom = NodePath("../MusicHSlider")
theme = ExtResource("2_3npvl")
max_value = 1.0
step = 0.001

[node name="MusicLabel" type="Label" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
theme = ExtResource("2_3npvl")
text = "Music Volume"

[node name="MusicHSlider" type="HSlider" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../MasterHSlider")
focus_neighbor_bottom = NodePath("../SfxHSlider")
max_value = 1.0
step = 0.001

[node name="MusicLabel2" type="Label" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
theme = ExtResource("2_3npvl")
text = "SFX Volume"

[node name="SfxHSlider" type="HSlider" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../MusicHSlider")
focus_neighbor_bottom = NodePath("../SeedTextEdit")
max_value = 1.0
step = 0.001

[node name="SeedLabel" type="Label" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
theme = ExtResource("2_3npvl")
text = "Seed"

[node name="SeedTextEdit" type="TextEdit" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
focus_neighbor_top = NodePath("../SfxHSlider")
focus_neighbor_bottom = NodePath("../SkipCutscenesCheckBox")
text = "-1"
context_menu_enabled = false

[node name="SkipCutscenesLabel" type="Label" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
theme = ExtResource("2_3npvl")
text = "Skip Cutscenes"

[node name="SkipCutscenesCheckBox" type="CheckBox" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../SeedTextEdit")
focus_neighbor_bottom = NodePath("../VeganCheckBox")

[node name="SkipTutorial" type="Label" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
theme = ExtResource("2_3npvl")
text = "Skip Tutorial"

[node name="SkipTutorialCheckbox" type="CheckBox" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SeedTextEdit")
focus_neighbor_bottom = NodePath("../VeganCheckBox")

[node name="VeganLabel" type="Label" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
theme = ExtResource("2_3npvl")
text = "Vegan"

[node name="VeganCheckBox" type="CheckBox" parent="CanvasLayer/SettingsControl/SettingsGridContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SkipCutscenesCheckBox")
focus_neighbor_bottom = NodePath("../../Buttons/CloseButton")

[node name="Buttons" type="GridContainer" parent="CanvasLayer/SettingsControl"]
layout_mode = 0
offset_left = 398.0
offset_top = 545.0
offset_right = 747.0
offset_bottom = 585.0
theme_override_constants/h_separation = 20
columns = 3

[node name="CloseButton" type="Button" parent="CanvasLayer/SettingsControl/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../CheatCodeButton")
focus_neighbor_top = NodePath("../../SettingsGridContainer/VeganCheckBox")
focus_neighbor_right = NodePath("../QuitToMainMenuButton")
text = "Close"

[node name="QuitToMainMenuButton" type="Button" parent="CanvasLayer/SettingsControl/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../CloseButton")
focus_neighbor_top = NodePath("../../SettingsGridContainer/VeganCheckBox")
focus_neighbor_right = NodePath("../CheatCodeButton")
text = "Quit to Main Menu"

[node name="CheatCodeButton" type="Button" parent="CanvasLayer/SettingsControl/Buttons"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../QuitToMainMenuButton")
focus_neighbor_top = NodePath("../../SettingsGridContainer/VeganCheckBox")
focus_neighbor_right = NodePath("../CloseButton")
text = "Cheat Codes"

[node name="CheatCodesControl" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CheatCodesGridContainer" type="GridContainer" parent="CanvasLayer/CheatCodesControl"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 369.0
offset_top = 77.0
offset_right = 784.0
offset_bottom = 383.0

[node name="CheatCodesButtons" type="GridContainer" parent="CanvasLayer/CheatCodesControl"]
layout_mode = 0
offset_left = 367.0
offset_top = 510.0
offset_right = 781.0
offset_bottom = 550.0
theme_override_constants/h_separation = 120
columns = 2

[node name="BackToSettingsButton" type="Button" parent="CanvasLayer/CheatCodesControl/CheatCodesButtons"]
layout_mode = 2
focus_neighbor_top = NodePath("../../CheatCodeTextEdit")
focus_neighbor_right = NodePath("../EnterCheatCodeButton")
text = "Back To Settings"

[node name="EnterCheatCodeButton" type="Button" parent="CanvasLayer/CheatCodesControl/CheatCodesButtons"]
layout_mode = 2
focus_neighbor_left = NodePath("../BackToSettingsButton")
focus_neighbor_top = NodePath("../../CheatCodeTextEdit")
text = "Enter Cheat Code"

[node name="CheatCodeTextEdit" type="TextEdit" parent="CanvasLayer/CheatCodesControl"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 423.0
offset_top = 432.0
offset_right = 715.0
offset_bottom = 471.0
focus_neighbor_bottom = NodePath("../CheatCodesButtons/EnterCheatCodeButton")
placeholder_text = "Enter Cheat code..."

[node name="InvalidLabel" type="Label" parent="CanvasLayer/CheatCodesControl"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 478.0
offset_top = 390.0
offset_right = 654.0
offset_bottom = 413.0
theme = ExtResource("2_3npvl")
text = "Not a valid cheat code!"

[node name="InvalidLabelTimer" type="Timer" parent="CanvasLayer/CheatCodesControl"]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[connection signal="value_changed" from="CanvasLayer/SettingsControl/SettingsGridContainer/MasterHSlider" to="." method="_on_master_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/SettingsControl/SettingsGridContainer/MusicHSlider" to="." method="_on_music_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/SettingsControl/SettingsGridContainer/SfxHSlider" to="." method="_on_sfx_h_slider_value_changed"]
[connection signal="text_changed" from="CanvasLayer/SettingsControl/SettingsGridContainer/SeedTextEdit" to="." method="_on_seed_text_edit_text_changed"]
[connection signal="toggled" from="CanvasLayer/SettingsControl/SettingsGridContainer/SkipCutscenesCheckBox" to="." method="_on_skip_cutscenes_check_box_toggled"]
[connection signal="toggled" from="CanvasLayer/SettingsControl/SettingsGridContainer/SkipTutorialCheckbox" to="." method="_on_skip_tutorial_checkbox_toggled"]
[connection signal="toggled" from="CanvasLayer/SettingsControl/SettingsGridContainer/VeganCheckBox" to="." method="_on_vegan_check_box_toggled"]
[connection signal="pressed" from="CanvasLayer/SettingsControl/Buttons/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsControl/Buttons/QuitToMainMenuButton" to="." method="_on_quit_to_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsControl/Buttons/CheatCodeButton" to="." method="_on_cheat_code_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CheatCodesControl/CheatCodesButtons/BackToSettingsButton" to="." method="_on_back_to_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CheatCodesControl/CheatCodesButtons/EnterCheatCodeButton" to="." method="_on_enter_cheat_code_button_pressed"]
[connection signal="focus_entered" from="CanvasLayer/CheatCodesControl/CheatCodeTextEdit" to="." method="_on_cheat_code_text_edit_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/CheatCodesControl/CheatCodeTextEdit" to="." method="_on_cheat_code_text_edit_focus_exited"]
[connection signal="timeout" from="CanvasLayer/CheatCodesControl/InvalidLabelTimer" to="." method="_on_invalid_label_timer_timeout"]
